--- a/style.scss
+++ b/style.scss
@@ -33,6 +33,18 @@ body {
     width: 100%;
     height: 100vh;
     color: $paraText;
+    // overflow: hidden;
+}
+
+#top-background {
+    position: absolute;
+    left: 50px;
+    bottom: 500px;
+    z-index: 1;
+}
+
+#bottom-background {
+   position: absolute;
 }
 
 .card-container {
@@ -43,6 +55,7 @@ body {
     border-radius: 20px;
     @include flex();
     flex-direction: column;
+    z-index: 3;
 }
 
 .card-header {
