--- a/style.scss
+++ b/style.scss
@@ -36,17 +36,6 @@ body {
     overflow: hidden;
 }
 
-#top-background {
-    position: absolute;
-    left: 50px;
-    bottom: 500px;
-    z-index: 1;
-}
-
-#bottom-background {
-   position: absolute;
-}
-
 .card-container {
     position: relative;
     background-color: white;
@@ -55,7 +44,7 @@ body {
     border-radius: 20px;
     @include flex();
     flex-direction: column;
-    z-index: 3;
+    z-index: 1000;
 }
 
 .card-header {
@@ -103,11 +92,15 @@ body {
 
         span {
             font-weight: 400;
+            margin-left: 5px;
+            color: $paraText;
+            opacity: 0.7;
         }
     }
 
     p {
         color: $paraText;
+        opacity: 0.7;
     }
 }
 
@@ -130,6 +123,7 @@ body {
 
     p {
         font-size: 10px;
+        opacity: 0.7;
     }
 }
 
@@ -143,4 +137,23 @@ footer {
     a {
         color: black; 
     } 
+}
+
+// graphics circle
+.top, .bottom {
+    position: absolute;
+}
+
+.top {
+    top: -400px;
+    left: -50px;
+    // background-color: red;
+}
+
+.bottom {
+    // background-color: blue;
+    position: absolute;
+    bottom: -525px;
+    right: 30px;
+   
 }
